# UMAP_image_classifiers

./: .gitignore  build_umap_site.py  citations.py  citations_umap.py  citations_umap1.py  curse_of_dim.py  extract_features.ipynb  list_citing_ids  main.py  owndataset.ipynb  pyproject.toml  temp.ipynb  temp.txt  visualize_umap.ipynb
docs/: clip_vit_b32__beans.html  clip_vit_b32__chest_xray.html  clip_vit_b32__cifar10.html  clip_vit_b32__cifar100.html  clip_vit_b32__eurosat.html  clip_vit_b32__fashion_mnist.html  clip_vit_b32__flowers102.html  clip_vit_b32__food101.html  clip_vit_b32__mini_imagenet.html  clip_vit_b32__mnist.html  clip_vit_b32__oxford_pets.html  clip_vit_b32__pathmnist.html  clip_vit_b32__skin_cancer.html  dinov2_b__beans.html  dinov2_b__chest_xray.html  dinov2_b__cifar10.html  dinov2_b__cifar100.html  dinov2_b__eurosat.html  dinov2_b__fashion_mnist.html  dinov2_b__flowers102.html  dinov2_b__food101.html  dinov2_b__mini_imagenet.html  dinov2_b__mnist.html  dinov2_b__oxford_pets.html  dinov2_b__pathmnist.html  dinov2_b__skin_cancer.html  efficientnet_b4__beans.html  efficientnet_b4__chest_xray.html  efficientnet_b4__cifar10.html  efficientnet_b4__cifar100.html  efficientnet_b4__eurosat.html  efficientnet_b4__fashion_mnist.html  efficientnet_b4__flowers102.html  efficientnet_b4__food101.html  efficientnet_b4__mini_imagenet.html  efficientnet_b4__mnist.html  efficientnet_b4__oxford_pets.html  efficientnet_b4__pathmnist.html  efficientnet_b4__skin_cancer.html  index.html  (+78 more)
