[project]
name = "eva-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.9.0",
    "colorcet>=3.2.1",
    "datasets>=4.8.5",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pacmap>=0.9.1",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "umap-learn>=0.5.12",
]
